# facebook_scraping_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/fb_scraping_project/: main.py  scraper.py
tests/: scraper_test.py
